plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.kaii'
version = '0.0.1-SNAPSHOT'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

configurations {
    compileOnly { extendsFrom annotationProcessor }
    asciidoctorExtensions
}

repositories { mavenCentral() }

ext {
    snippetsDir = file("$buildDir/generated-snippets")
}

test {
    useJUnitPlatform()
    outputs.dir snippetsDir
}

asciidoctor {
    configurations 'asciidoctorExtensions'
    inputs.dir snippetsDir
    baseDirFollowsSourceFile()
    dependsOn test
}

/** 🔑 문서는 processResources에 연결하지 말고 bootJar에만 포함 */
bootJar {
    dependsOn tasks.named('asciidoctor')
    from("$buildDir/docs/asciidoc") { into "static/docs" }
}

/** QueryDSL */
def querydslDir = "$buildDir/generated/querydsl"
sourceSets {
    main {
        java { srcDirs += [ querydslDir ] }
    }
}
tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}
clean.doLast { file(querydslDir).deleteDir() }

dependencies {
    // --- Spring Boot Starters ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // --- Cache ---
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // --- Utils ---
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.modelmapper:modelmapper:3.1.1'
    implementation 'org.json:json:20180813'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // --- JWT ---
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // --- JAXB (Java 9+ 호환성) ---
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
    implementation 'org.springframework.security:spring-security-rsa:1.0.11.RELEASE'

    // --- Excel Export ---
    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5' // 중복 제거됨

    // --- AWS SDK v2 (BOM 사용하여 버전 통일) ---
    implementation platform('software.amazon.awssdk:bom:2.29.0') // 최신 안정화 버전
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:sts'
    implementation 'software.amazon.awssdk:auth'
    implementation 'software.amazon.awssdk:regions'
    implementation 'software.amazon.awssdk:cloudwatch' // 중복 제거 및 버전 통일

    // [필수] AWS SDK v2용 HTTP Client (오류 해결)
    implementation 'software.amazon.awssdk:url-connection-client'

    // --- AWS SDK v1 (레거시 코드용, v2로 마이그레이션 완료 시 제거 권장) ---
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'

    // --- Database ---
    runtimeOnly 'com.mysql:mysql-connector-j'

    // --- Lombok ---
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // --- QueryDSL (Spring Boot 3.x / Jakarta) ---
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"

    // --- Test & REST Docs ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
}